--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -37,11 +37,12 @@ header {
         padding-right: 20px;
         padding-left: 20px;
         fill: $white;
-        transition: fill ease-in .3s;
+        transition: transform ease-in .1s;
+        
         cursor: pointer;
     
         &:hover{
-          fill: $default-color;
+            animation:ring 5s linear infinite;
         }
 
         circle{
