--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -14,3 +14,19 @@
     font-weight: bold;
     cursor: pointer;
 }
+
+
+@keyframes ring { 
+    0% { -webkit-transform: rotate(0deg); transform:rotate(0deg); } 
+    10% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
+    20% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); } 
+    30% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
+    40% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); }
+    50% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
+    60% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); }
+    70% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
+    80% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); }
+    90% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
+    100% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); }
+
+}
