--- a/sass/utilities/_mixins.scss
+++ b/sass/utilities/_mixins.scss
@@ -27,6 +27,13 @@
     70% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
     80% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); }
     90% { -webkit-transform: rotate(20deg); transform:rotate(20deg); }
-    100% { -webkit-transform: rotate(-20deg); transform:rotate(-20deg); }
+    100% { -webkit-transform: rotate(0deg); transform:rotate(0deg); }
 
+}
+
+.paused{
+    -webkit-animation-play-state:paused;
+    -moz-animation-play-state:paused;
+    -o-animation-play-state:paused; 
+    animation-play-state:paused;
 }
