--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -49,7 +49,7 @@ header {
     .ring:hover{
         animation:ring 5s ease-in-out infinite;
     }
-    
+
     .name{
         padding-left: 20px;
         border-left: 1px solid black;
@@ -101,29 +101,53 @@ header {
         }
     }
 
-    &-tasks{
+    &-notifications{
         position: absolute;
-        background-color: $secondary-color;
+        background-color: $white;
+        color: black;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
+        right: 50px;
+
+        :last-child{
+            border-bottom: none;
+        }
     
         &-close{
+            span{
             padding: 5px 20px;
-            color: red;
-            text-align: right;
+            color: $white;
+            background-color: red;
+            margin-left: auto;
             font-weight: bolder;
+            }
+            
         }
 
-        a{
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            
+        &-color{
+            border-bottom: 1px $default-color solid;
             :hover{
-                background-color: $default-color;
+                background-color: $secondary-color;
             }
+
         }
+
+        &-container{
+            display: flex;
+            justify-content: space-between;
+            padding: 20px 10px;
+            
+
+            div{
+                flex-grow: 1;
+                margin-left: 5px;
+            }
+
+
+        }
+
+
 
  
     }
