--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -62,6 +62,10 @@ header {
      .notification-bell, img, h3{
         display: inline-block;
     }
+    
+    a{
+        color: inherit;
+    }
 }
 
 .main-header{
